# CAZ_WOOSYNC

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  linters.yml
caz_woosync/: hooks.py  install.py  modules.txt  tasks.py
caz_woosync/api/: connection.py
caz_woosync/config/: desktop.py
caz_woosync/controller/: receiver.py
caz_woosync/doctype/caz_woo_customer_mapping/: caz_woo_customer_mapping.json  caz_woo_customer_mapping.py
caz_woosync/doctype/caz_woo_item_mapping/: caz_woo_item_mapping.json  caz_woo_item_mapping.py
caz_woosync/doctype/caz_woo_order_mapping/: caz_woo_order_mapping.json  caz_woo_order_mapping.py
caz_woosync/doctype/caz_woo_settings/: caz_woo_settings.json  caz_woo_settings.py
caz_woosync/doctype/caz_woo_store/: caz_woo_store.js  (+2 more)
caz_woosync/sync/: accounting.py  bulk_import.py  coupons.py  customers.py  dispatcher.py  inventory.py  items.py  orders.py  prices.py  refunds.py
caz_woosync/utils/: alerts.py  rate_limiter.py  security.py  store_manager.py
caz_woosync/www/: caz-woo-dashboard.html  caz-woo-dashboard.py  caz-woo-setup.html  caz-woo-setup.py
tests/: conftest.py  test_phase10_smoke.py  test_phase11_smoke.py  test_phase12_smoke.py  test_phase13_smoke.py  test_phase1_3_comprehensive.py  test_phase2_smoke.py  test_phase4_smoke.py  test_phase5_smoke.py  test_phase6_smoke.py  test_phase7_smoke.py  test_phase8_smoke.py  test_phase9_smoke.py  test_smoke.py
woo-plugin/: caz-woosync.php
woo-plugin/includes/: class-settings.php
(+17 files in other folders)
